Cambios varios, para ajustar la plantilla

--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -1,6 +1,17 @@
 /* CSS TYPOGRAFÍA */
 /* **************************************************************** */
 
+/* FUENTES NO STANDARD */
 @font-face {
-    
+    font-family: 'sanspro_regular';
+    src: url(../fonts/sourcesanspro-regular-webfont.woff2) format('woff2');
 }
+@font-face {
+    font-family: 'sanspro_negrita';
+    src: url(../fonts/sourcesanspro-black-webfont.woff2) format('woff2');
+}
+@font-face {
+    font-family: 'sanspro_italica';
+    src: url(../fonts/sourcesanspro-lightit-webfont.woff2) format('woff2');
+}
+/* **************************************************************** */
