--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -3,23 +3,45 @@
 
 /* ****************** */
 /* *** Smartphone *** */
-@media only screen and (min-device-width: 320px) and (orientation: portrait){
-
+@media only screen and (min-device-width: 300px) and (orientation: portrait) {
 }
 /* *************** */
 /* *** Tablet *** */
 /* Vertical */
-@media only screen and (min-device-width: 768px) and (orientation:portrait){
-
+@media only screen and (min-device-width: 768px) and (orientation: portrait) {
 }
 
 /* Horizontal */
-@media only screen and (min-device-width: 1024px) and (orientation:landscape){
-
+@media only screen and (min-device-width: 1024px) and (orientation: landscape) {
 }
 
 /* **************** */
 /* *** Desktop *** */
-@media only screen and (min-width: 1100px){
+@media only screen and (min-width: 1100px) {
     /* cambio de nav */
 }
+
+/* OTRA OPCIÓN */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    
+}
+
+/* Pero los datos pueden canviar durante los años, por eso a utilizar Variables */
