Estabalecer zonas de Variables

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,22 @@
 /* CSS LAYOUT */
 /* **************************************************************** */
 
+/* VARIABLES */
+
+
+
+
+/* HEADER */
+
+/* NAV */
+
+/* SECTION */
+
+/* ASIDE */
+
+/* ARTICLE */
+
+/* FIGURE */
+
+/* FOOTER */
 
