--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -1,6 +1,12 @@
 /* CSS TYPOGRAFÍA */
 /* **************************************************************** */
 
+/* VARIABLES */
+
+
+
+
+
 /* FUENTES NO STANDARD */
 @font-face {
     font-family: 'sanspro_regular';
@@ -15,3 +21,11 @@
     src: url(../fonts/sourcesanspro-lightit-webfont.woff2) format('woff2');
 }
 /* **************************************************************** */
+
+
+/* COLORES EN LA TIPOGRAFÍA */
+
+
+
+
+/* TIPOS DE TIPOGRAFÍA (H's, párrafos,..) */
