--- a/css/color.css
+++ b/css/color.css
@@ -1,2 +1,10 @@
 /* CSS COLOR */
 /* **************************************************************** */
+
+/* VARIABLES */
+
+
+
+
+
+/* COLORES en puntos concretos */
